--- a/metadata.yml
+++ b/metadata.yml
@@ -3,17 +3,19 @@ name: documented_passthrough
 url: http://httpbin.org
 type: passthrough
 endpoints:
-  get:
-    summary: GET method
-    parameters:
-      - name: foo
-        in: query
-        type: string
-        required: false
-  post:
-    summary: POST method
-    parameters:
-      - name: bar
-        in: body
-        description: Pet object that needs to be added to the store
-        required: false
+  /get:
+    get:
+      summary: GET method
+      parameters:
+        - name: foo
+          in: query
+          type: string
+          required: false
+  /post:
+    post:
+      summary: POST method
+      parameters:
+        - name: bar
+          in: body
+          description: Pet object that needs to be added to the store
+          required: false
